applications/media-server/manifests/jellyfin-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: media
spec:
  tls:
    - hosts:
        - "jellyfin.mrcontainer.nl"
      secretName: jellyfin-tls
  rules:
    - host: jellyfin.mrcontainer.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
